Thu Aug 21 03:09:34 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (io_extract_encoding_option): enc2 is external encoding if
	  external encoding and internal encoding is given.
	  (pipe_open): add flags and convconfig argument to initialize
	  fptr->{mode,enc,enc2}.
	  (pipe_open_v): pass flags and convconfig from caller to pipe_open.
	  (pipe_open_s): ditto.
	  (pop_last_hash): new function.
	  (rb_io_s_popen): use last hash as option to specify code conversion.
	  (rb_io_open): specify flags and convconfig arguments for
	  pipe_open_s.
	  (rb_f_backquote): ditto.

Thu Aug 21 02:27:03 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (prep_io): local variable renamed.
	  (rb_io_fdopen): ditto.
	  (prep_stdio): ditto.

Thu Aug 21 01:58:59 2008  Shugo Maeda  <shugo@ruby-lang.org>

	* configure.in: always check timezone().

	* strftime.c (rb_strftime): prefer timezone/altzone rather than
	  gettimeofday().  The second argument to gettimeofday() is ignored
	  on Solaris.

Thu Aug 21 02:03:08 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (open_key_args): simplified.

Thu Aug 21 01:57:03 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (open_key_args): IO.foreach(path, rs, limit) didn't work.

Thu Aug 21 01:31:34 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_file_sysopen_internal): unused function removed.
	  (rb_file_sysopen): ditto.

Thu Aug 21 01:09:26 2008  Tanaka Akira  <akr@fsij.org>

	* io.c: use mode_t for the 3rd argument, permission, of open(2).

Thu Aug 21 00:51:42 2008  Shugo Maeda  <shugo@netlab.jp>

	* configure.in: removed strftime from AC_REPLACE_FUNCS().

	* include/ruby/missing.h: removed prototype for strftime().

	* missing/strftime.c: removed.

	* time.c (time_to_s): use rb_strftime() instead of strftime(3).
	  (time_zone): ditto.

Thu Aug 21 00:49:50 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* strftime.c: win32 support.

Thu Aug 21 00:20:05 2008  Shugo Maeda  <shugo@ruby-lang.org>

	* strftime.c: new file.
